--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
                 <input type="text" placeholder="Escribe tu tarea..." id="escribir-tarea">
                 <button type="submit" id="agregar-tarea">Añadir</button>
             </form>
-            <button type="submit" id="borrar-todo">Borrar Todo</button>
+
+            <div class="borrar-contenedor">
+                <button type="submit" id="borrar-todo">Borrar Todo</button>
+            </div>
+    
             <ul class="lista" id="lista">
                 <!-- <li><span class="btn-completar">Check</span><p class="tarea incompleta">Tu tarea.</p> <button class="btn-eliminar">Eliminar</button></li>
                 <li>2</li>
